Added few classifiers to demos/classifier.py; demos/classifier_test_train.py - for test train accuracy estimation; demos/classifier_webcam.py for webcam face recognition

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,17 @@ models/openface/*.pkl
 celeb-classifier*
 
 site
+
+.DS_Store
+tech-report-openface.pdf
+trainModel.sh
+
+data/lfw_benchmark
+data/puneWingifighters
+data/puneWingifighters_all_8_samples
+data/dataSetProcessing.py
+data/lfw_topCounted
+data/puneWingifighters_14_people
+data/puneWingifighters_unknown_24_people
+data/mydataset
+data/puneWingifighters_3_samples
